--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,20 @@
         <maven.compiler.release>17</maven.compiler.release>
         <exec.mainClass>com.mycompany.saam.teste.pratico.Main</exec.mainClass>
     </properties>
-    
-        <dependencies>
-            <dependency>
-                <groupId>org.postgresql</groupId>
-                <artifactId>postgresql</artifactId>
-                <version>42.7.4</version>
-            </dependency>
-        </dependencies>
-        
+
+    <dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.1</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
+
 </project>
